--- a/assigment 1/style/index.css
+++ b/assigment 1/style/index.css
@@ -110,7 +110,7 @@ table {
     border-radius: 0.4em;
     flex-grow: 1;
     display: flex;
-    flex-direction: column;
+    flex-direction: row;
     justify-content: space-between;
     align-items: center;
     gap: 2em;
